catkin_w_s/logs/control_scripts/build.make.007.log.stderr
/home/subho/catkin_w_s/src/control_scripts/scripts/offboard_node.cpp: In function ‘int main(int, char**)’:
/home/subho/catkin_w_s/src/control_scripts/scripts/offboard_node.cpp:90:5: error: ‘Land’ was not declared in this scope; did you mean ‘rand’?
   90 |     Land land(uav_id);
      |     ^~~~
      |     rand
/home/subho/catkin_w_s/src/control_scripts/scripts/offboard_node.cpp:91:5: error: ‘land’ was not declared in this scope; did you mean ‘rand’?
   91 |     land.init_connection();
      |     ^~~~
      |     rand
make[2]: *** [CMakeFiles/offboard_node.dir/build.make:63: CMakeFiles/offboard_node.dir/scripts/offboard_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:726: CMakeFiles/offboard_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/subho/catkin_w_s/src/control_scripts/scripts/offboard_node.cpp: In function ‘int main(int, char**)’:
/home/subho/catkin_w_s/src/control_scripts/scripts/offboard_node.cpp:90:5: error: ‘Land’ was not declared in this scope; did you mean ‘rand’?
   90 |     Land land(uav_id);
      |     ^~~~
      |     rand
/home/subho/catkin_w_s/src/control_scripts/scripts/offboard_node.cpp:91:5: error: ‘land’ was not declared in this scope; did you mean ‘rand’?
   91 |     land.init_connection();
      |     ^~~~
      |     rand
make[2]: *** [CMakeFiles/control_scripts.dir/build.make:76: CMakeFiles/control_scripts.dir/scripts/offboard_node.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/subho/catkin_w_s/src/control_scripts/scripts/takeoff_node.cpp: In function ‘int main(int, char**)’:
/home/subho/catkin_w_s/src/control_scripts/scripts/takeoff_node.cpp:87:5: error: ‘Land’ was not declared in this scope; did you mean ‘rand’?
   87 |     Land land(uav_id);
      |     ^~~~
      |     rand
/home/subho/catkin_w_s/src/control_scripts/scripts/takeoff_node.cpp:88:5: error: ‘land’ was not declared in this scope; did you mean ‘rand’?
   88 |     land.init_connection();
      |     ^~~~
      |     rand
make[2]: *** [CMakeFiles/control_scripts.dir/build.make:89: CMakeFiles/control_scripts.dir/scripts/takeoff_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:240: CMakeFiles/control_scripts.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
